[tool.poetry]
name = "yearly-strava-graph"
version = "0.1.0"
description = ""
authors = ["Travis Chambers <tjchambers32@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
click = "8.0.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
